fix: :bug: render shine behind icon

--- a/public/resources/scss/stats.scss
+++ b/public/resources/scss/stats.scss
@@ -1333,7 +1333,7 @@ a.additional-player-stat:hover {
     rgba(128, 186, 232, 0) 99%,
     rgba(125, 185, 232, 0) 100%
   );
-  z-index: 10;
+  z-index: 8;
   animation: shine 4s infinite;
 }
 
